add combinatorics function (permutation) and swap values in vector

--- a/LinearAlgebra.csproj
+++ b/LinearAlgebra.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Tests.cs" />
     <Compile Include="Vector.cs" />
     <Compile Include="VectorSpace.cs" />
+    <Compile Include="Сombinatorics.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
