--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="NUnit" version="3.13.2" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
